Link to Enolaba

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Hello!</h1>
+    <a href="https://rawgit.com/astasiak/enolaba/master/index.html">Enolaba</a>
   </body>
 </html>
